# presentation

./: Makefile  Makefile.in  config.status  configure  mygym.glade
autom4te.cache/: output.2  requests  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in  admin.c  admin.h  callbacks.c  callbacks.h  coach.c  coach.h  interface.c  interface.c.bak  interface.h  kine.c  kine.h  login.c  login.h  main.c  msg.h  mygym  nutri.c  nutri.h  rdv.c  rdv.h  treeview_admin.c  treeview_admin.h  treeview_login.c  treeview_login.h
src/.deps/: admin.Po  callbacks.Po  interface.Po  kine.Po  login.Po  main.Po  nutri.Po  rdv.Po  support.Po  treeview_admin.Po  treeview_login.Po
src/data/: coach.usr  id  users
